# agency

./: .env  .gitignore  .mcp.json  AGENCY_PROTOCOL.md  AGENTS.md  CLAUDE.md  INITIAL.md  JULES-REVIEW.md  KOHAERENZ_README.md  LICENSE  PROJECT_INDEX.md  README.md  REVIEW-348-349.md  REVIEW.md  Review.md  TODO.md  architecture.md  kohaerenz_protocol_prompt.txt  kohaerenz_protocol_system_instruction.json  metaharness_score.txt  pr_description.md  pyproject.toml  refactor.md  requirements.txt  skills-lock.json
.agency/: README.md  config.yaml  export-1780444280467119725.json  prompt-frameworks-overlay.yaml  session-graph-analysis.md  session.db
.agency/sessions/: b3ef26fb-351a-5f91-b415-a11981c83b20-toolcalls.md  intent_2073f77c.md  intent_372e7740.md  intent_6eea0e67.md  intent_771bfc7b.md  intent_892308ec.md
.agency/sql/: session-snapshot.sql
.claude/: settings.json
.claude-plugin/: marketplace.json  plugin.json
.claude/hooks/: agency-capture.sh  session-start.sh
.github/workflows/: quality.yml  test.yml  test.yml.disabled
PRPs/: philosophical-identity-analysis-phase1.md
Plan/: 000-overview.md
Plan/001-toolresult-and-typed-errors/: REVIEW.md  spec.md
Plan/002-boundary-driver-protocol/: VISION-REVIEW.md  spec.md
Plan/003-skill-phase-objects/: REVIEW.md  VISION-REVIEW.md  spec.md
Plan/004-template-schema-coverage/: REVIEW.md  VISION-REVIEW.md  spec.md
Plan/005-context-mode-and-token-economics/: REVIEW.md  spec.md
Plan/006-core-hardening/: REVIEW.md  VISION-REVIEW.md  spec.md
Plan/007-music-domain-capability/: VISION-REVIEW.md  spec.md  spec.md.tmp.549.890d01af9ad2
Plan/008-superclaude-analysts/: REVIEW.md  VISION-REVIEW.md  spec.md
Plan/009-superpowers-remainder/: REVIEW.md  VISION-REVIEW.md  spec.md
Plan/010-novel-domain/: REVIEW.md  VISION-REVIEW.md  spec.md
Plan/011-agentic-capabilities/: REVIEW.md  VISION-REVIEW.md  spec.md
Plan/012-jules-complete-lifecycle-and-watcher/: DOGFOOD-NOTES.md  IMPLEMENTATION-PLAN.md  spec.md
Plan/013-jules-skills-and-capability-improvements/: DESIGN.md  IMPLEMENTATION-PLAN.md  RESEARCH-operational.md  RESEARCH-skills.md  RESEARCH-tools.md  REVIEW.md  spec.md
Plan/014-observation-to-spec-amendment/: spec.md
Plan/015-architecture-review/: ARCHITECTURE-REVIEW.md  JULES-OBSERVATIONS.md  PROPOSED-SPECS.md
agency/: __init__.py  __main__.py  _arch_metrics.py  _axis_registry_sweep.py  _capability_loader.py  _capture.py  _checks.py  _clarity.py  _codes_coverage.py  _config.py  _coverage_gate.py  _db_path.py  _doctor_shapes.py  _embedder_handle.py  _enhancement_stubs.py  _entities.py  _entity_store.py  _enums.py  _envelope.py  _events.py  _frontmatter.py  _frugal.py  _hooks.py  _host_bridge.py  _host_llm.py  _install_adapters.py  _install_surface.py  _intent_capture.py  _invoke.py  _lifecycle_events.py  _lifecycle_machines.py  _lifecycle_transitions.py  _link_finding.py  _llm.py  _loop.py  _loop_events.py  _monitor.py  _node_id_sweep.py  _overflow.py  _pillars.py  (+44 more)
claudedocs/: verb-tool-desc-audit.md  workflow_spec_031_032.md
commands/: agency-adr-usage.md  agency-album-concept.md  agency-approach-routing.md  agency-authoring-capabilities.md  agency-brainstorm.md  agency-branch-usage.md  agency-capability-routing.md  agency-character-architect.md  agency-code-analysis.md  agency-config-usage.md  agency-critical-thinking-pass.md  agency-critical-thinking.md  agency-debug.md  agency-deep-research.md  agency-develop-spec.md  agency-developmental-editor.md  agency-dispatch-decision.md  agency-dispatching-parallel-agents.md  agency-execute.md  agency-frugal.md  agency-guided-discovery.md  agency-intent.md  agency-jules-fanout.md  agency-jules-pr-review-cycle.md  agency-jules-protocol-preamble.md  agency-jules-recovery-when-stuck.md  agency-jules-self-improvement.md  agency-jules-tool-discipline.md  agency-lifecycle-management.md  agency-lifecycle.md  agency-loop-design.md  agency-memory.md  agency-mode-selection.md  agency-onboard.md  agency-plan-execute.md  agency-plan.md  agency-quality-audit.md  agency-quality-debt.md  agency-quality-health.md  agency-quality-review.md  (+13 more)
docs/: EXTENSION-PLAN.md  README.md  ROADMAP.md  getting-started.md
examples/: __init__.py  music.py  music_drivers.py
hooks/: dispatch  hooks.json  pre-commit-doc-sync.sh  run-hook.cmd  session-start  session-start.sh
monitors/: monitors.json
research/: JULES_RESEARCH_PROTOCOL.md  NOTES-jules-capability.md  README.md  SOURCES.md
scripts/: __init__.py  _doc_drift.py  _spec_tree.py  check-doc-drift  check-drift  check-followup  check-no-truncate  check_architecture.py  check_codes_coverage.py  check_collect_callers.py  check_response_prefix.py  check_scaffold_markers.py  check_schema_coverage.py  check_vision_goals.py  derive_docs.py  followup_derive.py  gen-capability-docs  gen-living-spec.py  gen-spec-index  mcp_wire_smoke.py  optimize-verb-docs  review-watch.sh  session-snapshot  setup  test-cap  test-changed  vision_matrix.py
seed/: AGENTS.md  README.md  requirements.txt
tests/: conftest.py  test__research_citation.py  test_adr_draft_refines.py  test_advisory_scripts.py  test_agency.py  test_agency_doctor.py  test_analyze_architecture.py  test_analyze_axis_registry.py  test_analyze_capability.py  test_analyze_deps_integration.py  test_analyze_graph.py  test_analyze_performance.py  test_analyze_quality.py  test_analyze_security.py  test_analyze_subprocess_analyzer.py  test_anthropic_driver.py  test_arch_metrics.py  test_architecture_drift.py  test_axis_registry_sweep.py  test_capability_loader.py  test_cli_chain_fields.py  test_cli_click.py  test_codes_coverage.py  test_codex_c2_c3.py  test_collect_callers.py  test_context_neighbors.py  test_coverage_gate.py  test_coverage_gate_derive.py  test_db_path_resolution.py  test_delegate_dispatch_decision.py  test_derive_docs.py  test_derived_doc_fences.py  test_develop_authoring.py  test_develop_intent_cues.py  test_develop_plan_execute.py  test_discipline_skills_041.py  test_dispatch_decision_extended.py  test_distribution.py  test_doctor_shapes.py  test_doctrine_docs.py  (+198 more)
(+3388 files in other folders)
