[project]
name = "agency"
version = "0.1.0"
description = "An installable Claude Code plugin: a FastMCP engine over a bi-temporal GraphQLite graph; four concepts (Intent · Capability · Lifecycle · Memory) on code-mode as the contract."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "agency", email = "noreply@example.com" },
]
dependencies = [
    "graphqlite>=0.5.0",
    "fastmcp[code-mode]>=3.3.0",
    "pysqlite3-binary",
    "httpx",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.0",
    "pytest-asyncio>=0.23.0",
    # Spec 023 token-budget gate (tests/test_token_budget.py) is specified in
    # tiktoken cl100k tokens. Without it the test would fall back to a char/4
    # proxy whose counts differ from the real tokenizer and false-fail in CI
    # (a 521-char search rendered 130 by proxy vs 112 by tiktoken). Pin it so
    # CI validates the real budget; the test skips if it's somehow absent.
    "tiktoken>=0.7.0",
]
# Spec 045 — optional sentence-transformers BGE backend for the
# semantic-recall verb. Default is the zero-dep pure-Python TF-IDF
# embedder; opt in to BGE via:
#   pip install -e .[recall]
#   AGENCY_EMBEDDER=bge-small-en
# The model (~80MB) downloads on first encode. If the dep is missing
# when AGENCY_EMBEDDER selects BGE, resolve_embedder() falls back to
# TF-IDF silently — agency_doctor reports the live backend so the
# fallback stays visible.
recall = [
    "sentence-transformers>=2.0",
]

[project.scripts]
# Spec 039 distribution surface — three entry points, one per consumer pattern:
#   `agency`        — CLI for bash callers (search/get-schema/execute over argv)
#   `agency-mcp`    — MCP server entry (stdio JSON-RPC; what .mcp.json launches)
#   `agency-doctor` — bare-CLI health check (one-shot diagnostic; exit 0/1 for
#                     scripting; same payload shape as the `agency_doctor`
#                     substrate tool)
agency        = "agency.cli:main"
agency-mcp    = "agency.__main__:main"
agency-doctor = "agency.__main__:doctor_main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agency"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
asyncio_mode = "auto"
markers = [
    # Spec 039 §"End-to-end tests": slow tag for real-subprocess JSON-RPC
    # roundtrip + pipx-install smoke. Run with `pytest -q -m e2e`. Skipped
    # in the default suite to keep CI per-push fast; required on tag builds.
    "e2e: marks tests that spawn an MCP-server subprocess (slow, requires the agency-mcp binary resolvable via PATH | .venv | bin/)",
]
filterwarnings = [
    # Third-party noise: opentelemetry-api 1.42 calls
    # `entry_points()` with no args (legacy SelectableGroups path) then
    # `.values()` on the result, instead of the modern
    # `entry_points(group=...).select(...)` pattern. Fix is upstream
    # (no newer version available as of this commit); suppress the
    # noise locally so the test output is clean.
    "ignore::DeprecationWarning:opentelemetry.util._importlib_metadata",
]
