[project]
name = "agency"
version = "0.1.0"
description = "An installable Claude Code plugin: a FastMCP engine over a bi-temporal GraphQLite graph; four concepts (Intent · Capability · Lifecycle · Memory) on code-mode as the contract."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "agency", email = "noreply@example.com" },
]
dependencies = [
    "graphqlite>=0.5.0",
    "fastmcp[code-mode]>=3.3.0",
    "pysqlite3-binary",
    "httpx",
    # Spec 079 — the bash CLI (agency/cli.py) is built on Click: it mirrors every
    # capability verb as `agency <cap> <verb>` so non-MCP agents reach the
    # capabilities directly. (Already present transitively via fastmcp; pinned
    # direct because cli.py imports it.)
    "click>=8.1",
]

# AGENCY-DRIFT: deps-extras — adding/removing an extra here means:
#   (1) update CI workflow .github/workflows/test.yml install line
#   (2) update agency_doctor.* report if the extra has runtime indicators
#   (3) update CLAUDE.md Dev section if user-facing
#   (4) add a Spec for the new extra under Plan/
[project.optional-dependencies]
dev = [
    "pytest>=9.0.0",
    "pytest-asyncio>=0.23.0",
    # Spec 023 token-budget gate (tests/test_token_budget.py) is specified in
    # tiktoken cl100k tokens. Without it the test would fall back to a char/4
    # proxy whose counts differ from the real tokenizer and false-fail in CI
    # (a 521-char search rendered 130 by proxy vs 112 by tiktoken). Pin it so
    # CI validates the real budget; the test skips if it's somehow absent.
    "tiktoken>=0.7.0",
    # Spec 053 — parallel test execution. `pytest -n auto` shards the
    # suite across CPU cores; on a 4-core machine the 4-min suite drops
    # to ~1 min. Each test uses tmp_path-scoped DBs so no shared state.
    "pytest-xdist>=3.5",
    # Spec 149 Slice 1 — `vision_goals:` frontmatter validator parses
    # spec YAML frontmatter. PyYAML lands in CI via jsonschema-path
    # transitively today; declaring it here makes the dependency
    # explicit rather than relying on the transitive pull-in.
    "PyYAML>=6.0",
    # Spec 282 (setup ergonomics, user directive 2026-06-13): the DEFAULT
    # dev setup pulls every LIGHTWEIGHT runtime extra so `pip install -e
    # ".[dev]"` (and `scripts/setup`) yields a fully-functional engine with
    # ZERO silently-skipped capability tests — no more "deps missing" friction.
    # The only opt-out is the heavy `recall` torch backend (~2GB), which stays
    # behind `.[all]`. Self-references resolve via the project name.
    "agency[analyze,tokens,anthropic,publish]",
]
# Spec 282 — `.[all]` is the everything install, INCLUDING the heavy
# sentence-transformers/torch `recall` backend. Use when you want the BGE
# semantic-recall embedder; otherwise `.[dev]` is the fast, complete default.
all = [
    "agency[dev,recall]",
]
# Spec 045 — optional sentence-transformers BGE backend for the
# semantic-recall verb. Default is the zero-dep pure-Python TF-IDF
# embedder; opt in to BGE via:
#   pip install -e .[recall]
#   AGENCY_EMBEDDER=bge-small-en
# The model (~80MB) downloads on first encode. If the dep is missing
# when AGENCY_EMBEDDER selects BGE, resolve_embedder() falls back to
# TF-IDF silently — agency_doctor reports the live backend so the
# fallback stays visible.
recall = [
    "sentence-transformers>=2.0",
]
# Spec 050 — optional industrial Python static-analysis tools used by
# the analyze capability. When installed, _ruff.py / _bandit.py /
# _radon.py wrappers compose ruff (700+ lint rules), bandit (CWE
# security), and radon (cyclomatic complexity) findings ALONGSIDE the
# agency-native Q*/S*/P*/A* rules. Without this extra, the analyze
# capability still ships Spec 042 v1 findings (Q001-Q004, S001-S004,
# P001-P003, A001-A003); each wrapper degrades silently when its tool
# is missing. agency_doctor reports the live extras.
analyze = [
    "ruff>=0.6",
    "bandit>=1.7",
    "radon>=6",
]
# Spec 082 — optional Anthropic SDK for AUTHORITATIVE token counting via
# `messages.count_tokens` (the token-economy gate's measurement). Without it, the
# TokenCounter boundary falls back to tiktoken (a dev dep) then a char//4 proxy —
# `agency_doctor` reports the live `token_backend`. Opt in with
# `pip install -e .[tokens]` + `ANTHROPIC_API_KEY`.
tokens = [
    "anthropic>=0.40",
]
# Spec 083 — optional Anthropic SDK for publishing capability Agent Skills to the
# Skills API (`plugin.publish_skill`, /v1/skills). Without it (or without
# ANTHROPIC_API_KEY), `publish_skill(dry_run=True)` still returns the package
# manifest offline; only the upload path needs this extra + a key.
publish = [
    "anthropic>=0.40",
]
# Spec 147 — the canonical AnthropicDriver boundary (`ctx.get_driver("anthropic")`).
# Slice 1 = the typed inference surface (complete / count_tokens / DriverError /
# readiness) with the claude-api defaults (claude-opus-4-8, adaptive thinking,
# output_config structured outputs). Without this extra (or without
# ANTHROPIC_API_KEY) the driver reports backend "none" and every consumer verb
# degrades to its scaffold path — nothing crashes. agency_doctor reports
# `anthropic_driver` readiness.
anthropic = [
    "anthropic>=0.40",
]
[project.scripts]
# Spec 039 distribution surface — three entry points, one per consumer pattern:
#   `agency`        — CLI for bash callers (search/get-schema/execute over argv)
#   `agency-mcp`    — MCP server entry (stdio JSON-RPC; what .mcp.json launches)
#   `agency-doctor` — bare-CLI health check (one-shot diagnostic; exit 0/1 for
#                     scripting; same payload shape as the `agency_doctor`
#                     substrate tool)
agency        = "agency.cli:main"
agency-mcp    = "agency.__main__:main"
agency-doctor = "agency.__main__:doctor_main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agency"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
asyncio_mode = "auto"
markers = [
    # Spec 039 §"End-to-end tests": slow tag for real-subprocess JSON-RPC
    # roundtrip + pipx-install smoke. Run with `pytest -q -m e2e`. Skipped
    # in the default suite to keep CI per-push fast; required on tag builds.
    "e2e: marks tests that spawn an MCP-server subprocess (slow, requires the agency-mcp binary resolvable via PATH | .venv | bin/)",
    # Spec 053 — capability/spec markers. Auto-applied by tests/conftest.py
    # based on the test file path; lets `pytest -m research` pick up tests
    # in tests/test_research_*.py without per-test maintenance.
    "analyze: tests targeting the analyze capability",
    "research: tests targeting the research capability",
    "dogfood: tests targeting the dogfood capability",
    "document: tests targeting the document capability",
    "reflect: tests targeting the reflect capability",
    "delegate: tests targeting the delegate capability (incl. dispatch_decision)",
    "intent: tests targeting Intent + intent_bootstrap + chaining (Spec 048)",
    "jules: tests targeting the jules capability",
    "distribution: tests targeting Spec 039 distribution surface",
    "install: tests targeting agency.install",
    "substrate: tests targeting agency_welcome / agency_doctor substrate tools",
    # Spec 060 round 9 — folder-form-cap markers.
    "develop: tests targeting the develop capability",
    "gate: tests targeting the gate capability",
    "branch: tests targeting the branch capability",
    "workspace: tests targeting the workspace capability",
    "subagent: tests targeting the subagent capability",
    "skill_generator: tests targeting the skill_generator capability",
    "plugin: tests targeting the plugin capability",
    # Spec 094 — music cluster wave (lifecycle child + 6 sibling clusters).
    "music: tests targeting the music capability (any cluster)",
    "music_lifecycle: tests targeting the music lifecycle cluster (Spec 094)",
    "music_lyrics: tests targeting the music lyrics cluster (Spec 095)",
    "music_audio: tests targeting the music audio cluster (Spec 096)",
    "music_catalogue: tests targeting the music catalogue cluster (Spec 097)",
    "music_promo: tests targeting the music promo cluster (Spec 098)",
    "music_research: tests targeting the music research cluster (Spec 099)",
    "music_gates: tests targeting the music gates cluster (Spec 100)",
    # Spec 101 — novel cluster wave.
    "novel: tests targeting the novel capability (any cluster)",
]
filterwarnings = [
    # Third-party noise: opentelemetry-api 1.42 calls
    # `entry_points()` with no args (legacy SelectableGroups path) then
    # `.values()` on the result, instead of the modern
    # `entry_points(group=...).select(...)` pattern. Fix is upstream
    # (no newer version available as of this commit); suppress the
    # noise locally so the test output is clean.
    "ignore::DeprecationWarning:opentelemetry.util._importlib_metadata",
]
